fix(link): fix icon alignment with nested `hasShape` icons
DSW-401

--- a/packages/lumx-core/src/scss/components/link/_index.scss
+++ b/packages/lumx-core/src/scss/components/link/_index.scss
@@ -11,7 +11,9 @@
     }
 
     // Fix icon alignment
-    & .#{$lumx-base-prefix}-icon {
+    & > .#{$lumx-base-prefix}-icon,
+    &__content > .#{$lumx-base-prefix}-icon
+    {
         &, & svg {
             display: inline;
             line-height: initial;
